k8s-policies/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: no-latest-tag
      match:
        resources:
          kinds:
            - Pod
            - Deployment
      exclude:
        resources:
          namespaces:
            - falco
            - trivy-system
            - istio-system
      validate:
        message: "Using the 'latest' tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
