k8s-policies/kyverno/enforce-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-labels
spec:
  validationFailureAction: enforce
  rules:
    - name: require-app-and-env-labels
      match:
        resources:
          kinds:
            - Pod
            - Deployment
      exclude:
        resources:
          namespaces:
            - falco
            - trivy-system
            - istio-system
            - monitoring
            - hipster-shop
      validate:
        message: "All resources must have 'app' and 'env' labels."
        pattern:
          metadata:
            labels:
              app: "?*"
              env: "?*"
