k8s-policies/kyverno/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: check-limits
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - falco
            - trivy-system
            - istio-system
            - monitoring
      validate:
        message: "CPU and memory limits must be set for all containers."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    cpu: "?*"
                    memory: "?*"
