k8s-policies/kyverno/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: validate-registry
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - falco
            - trivy-system
            - istio-system
            - monitoring
      validate:
        message: "Only images from Docker Hub, GCR, or GHCR are allowed."
        pattern:
          spec:
            containers:
              - image: "docker.io/* | gcr.io/* | ghcr.io/*"
